src/objects/loan__Start_of_Day_Job_Chaining__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan__Investor_Payout__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Investor Payout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Diagnostics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Diagnostics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Lock_Based_ACH__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lock Based ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Multiple_Payment_Method_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Payment Method Support</label>
        <type>Checkbox</type>
    </fields>
    <label>Start of Day Job Chaining</label>
</CustomObject>